# hitsound-web-extension

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .lintstagedrc  .prettierignore  BUILD.bazel  README.md  WORKSPACE  commitlint.config.js  jest.config.js  manifest.chromium.json  manifest.firefox.json  package-lock.json  package.json  prettier.config.js  tsconfig.json  tsconfig.test.json  tsconfig.worker.json
.github/workflows/: default.yaml
.husky/: pre-commit
bazel/jest/: jest.bzl
bazel/wasm_bindgen/: BUILD.bazel  wasm_bindgen.bzl
src/: BUILD.bazel  audio-player.ts  background.html  background.ts  config.ts  game.ts  options.html  options.ts  popup.html  popup.ts  state.spec.ts  state.ts  styles.scss
src/_locales/cs/: messages.json
src/_locales/de/: messages.json
src/_locales/en/: messages.json
src/_locales/es/: messages.json
src/_locales/fr/: messages.json
src/_locales/hu/: messages.json
src/_locales/ja/: messages.json
src/_locales/ko/: messages.json
src/_locales/nl/: messages.json
src/_locales/pl/: messages.json
src/_locales/pt_PT/: messages.json
src/_locales/zh_TW/: messages.json
src/actions/: BUILD.bazel  background.ts  index.ts  popup.ts
src/assets/data/: sounds.json
src/assets/mmdb/: GeoLite2-City.mmdb.lzma
src/assets/models/: numbers.babylon  numbers.babylon.manifest  settings_icon.babylon  settings_icon.babylon.manifest
src/elements/: BUILD.bazel  volume-control.spec.ts  volume-control.ts
src/port/: BUILD.bazel  action.ts  index.ts  rpc.ts
src/wasm/geoip/: BUILD.bazel  Cargo.toml  README.md  worker.ts
src/wasm/geoip/raze/: BUILD.bazel  crates.bzl
src/wasm/geoip/raze/remote/: BUILD.build_const-0.2.1.bazel  BUILD.bumpalo-3.6.1.bazel  BUILD.byteorder-1.4.3.bazel  BUILD.cfg-if-0.1.10.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.crc-1.8.1.bazel  BUILD.ipnetwork-0.18.0.bazel  BUILD.js-sys-0.3.57.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.93.bazel  BUILD.log-0.4.14.bazel  BUILD.lzma-rs-0.2.0.bazel  BUILD.maxminddb-0.23.0.bazel  BUILD.memchr-2.4.0.bazel  BUILD.memory_units-0.4.0.bazel  BUILD.once_cell-1.10.0.bazel  BUILD.proc-macro2-1.0.28.bazel  BUILD.quote-1.0.9.bazel  BUILD.serde-1.0.136.bazel  BUILD.serde_derive-1.0.136.bazel  BUILD.syn-1.0.68.bazel  BUILD.unicode-xid-0.2.1.bazel  BUILD.wasm-bindgen-0.2.80.bazel  BUILD.wasm-bindgen-backend-0.2.80.bazel  BUILD.wasm-bindgen-macro-0.2.80.bazel  BUILD.wasm-bindgen-macro-support-0.2.80.bazel  BUILD.wasm-bindgen-shared-0.2.80.bazel  BUILD.web-sys-0.3.51.bazel  BUILD.wee_alloc-0.4.5.bazel  BUILD.winapi-0.3.9.bazel  BUILD.winapi-i686-pc-windows-gnu-0.4.0.bazel  BUILD.winapi-x86_64-pc-windows-gnu-0.4.0.bazel
src/wasm/geoip/src/: lib.rs
