load(":wasm_bindgen.bzl", "rust_wasm_bindgen_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "wasm_bindgen_toolchain")

rust_wasm_bindgen_toolchain(
    name = "default_wasm_bindgen_toolchain_impl",
    bindgen = "@rules_rust//wasm_bindgen/raze:cargo_bin_wasm_bindgen",
)

toolchain(
    name = "default_wasm_bindgen_toolchain",
    toolchain = "default_wasm_bindgen_toolchain_impl",
    toolchain_type = "//bazel/wasm_bindgen:wasm_bindgen_toolchain",
)
