[package]
name = "geoip"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.57"
lzma-rs = "0.2.0"
maxminddb = "0.23.0"
proc-macro2 = "1.0.28"
serde = "1.0.136"
wasm-bindgen = "0.2.80"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.51", features = ["IdbDatabase"] }

[package.metadata.raze]
genmode = "Remote"
workspace_path = "//src/wasm/geoip/raze"
targets = [
    "wasm32-unknown-unknown"
]
package_aliases_dir = "raze"
default_gen_buildrs = false

[package.metadata.raze.crates.crc.'1.8.1']
gen_buildrs = true

[package.metadata.raze.crates.libc.'0.2']
gen_buildrs = true

[package.metadata.raze.crates.proc-macro2.'1.0.28']
gen_buildrs = true
additional_flags = [
    "--cfg=use_proc_macro",
    "--cfg=wrap_proc_macro",
]

[package.metadata.raze.crates.serde.'1.0.127']
gen_buildrs = true

[package.metadata.raze.crates.syn.'1.0.68']
gen_buildrs = true

[package.metadata.raze.crates.wee_alloc.'0.4.5']
additional_deps = [
    "@raze__libc__0_2_93//:libc",
]